--- a/sites/css/bootstrapColors.css
+++ b/sites/css/bootstrapColors.css
@@ -2,329 +2,431 @@
  - COLOR primary
  ------------------------------------*/
  .alert-primary {
-  color: #000000;
-  background-color: #7b8ba3;
-  border-color: #6f809b;
+  color: #7b7b7b !important;
+  background-color: #fdfdfd !important;
+  border-color: #fcfcfc !important;
 }
+
 .alert-primary hr {
-  border-top-color: #62748e;
+  border-top-color: #fbfbfb !important;
 }
+
 .alert-primary .alert-link {
-  color: #000000;
+  color: #4a4a4a !important;
 }
+
 .badge-primary {
-  color: #fff;
-  background-color: #222831;
+  color: #FFFFFF !important;
+  background-color: #f5f5f5 !important;
 }
+
 .badge-primary[href]:hover, .badge-primary[href]:focus {
-  color: #fff;
-  background-color: #0d0f12;
+  color: #FFFFFF !important;
+  background-color: #c4c4c4 !important;
 }
+
 .bg-primary {
-  background-color: #222831 !important;
+  color: #FFFFFF !important;
+  background-color: #f5f5f5 !important;
 }
-a.bg-primary:hover, a.bg-primary:focus, button.bg-primary:hover, button.bg-primary:focus {
-  background-color: #0d0f12 !important;
+
+a.bg-primary:hover, a.bg-primary:focus,
+button.bg-primary:hover,
+button.bg-primary:focus {
+  background-color: #c4c4c4 !important;
 }
+
 .border-primary {
-  border-color: #222831 !important;
+  border-color: #f5f5f5 !important;
 }
+
 .btn-primary {
-  color: #fff;
-  background-color: #222831;
-  border-color: #222831;
+  color: #FFFFFF !important;
+  background-color: #f5f5f5 !important;
+  border-color: #f5f5f5 !important;
 }
+
 .btn-primary:hover {
-  color: #fff;
-  background-color: #13161b;
-  border-color: #0d0f12;
+  color: #FFFFFF !important;
+  background-color: #dddddd !important;
+  border-color: #f5f5f5 !important;
 }
+
 .btn-primary:focus, .btn-primary.focus {
-  box-shadow: 0 0 0 0.2rem rgba(34, 40, 49, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(245,245,245,0.5) !important;
 }
+
 .btn-primary.disabled, .btn-primary:disabled {
-  color: #fff;
-  background-color: #222831;
-  border-color: #222831;
+  color: #FFFFFF !important;
+  background-color: #f5f5f5 !important;
+  border-color: #f5f5f5 !important;
 }
+
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
-  color: #fff;
-  background-color: #0d0f12;
-  border-color: #060809;
+  color: #FFFFFF !important;
+  background-color: #c4c4c4 !important;
+  border-color: #acacac !important;
 }
+
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(34, 40, 49, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(245,245,245,0.5) !important;
 }
+
 .btn-outline-primary {
-  color: #222831;
-  background-color: transparent;
-  border-color: #222831;
+  color: #f5f5f5 !important;
+  background-color: transparent !important;
+  border-color: #f5f5f5 !important;
 }
+
 .btn-outline-primary:hover {
-  color: #fff;
-  background-color: #222831;
-  border-color: #222831;
+  color: #FFFFFF !important;
+  background-color: #f5f5f5 !important;
+  border-color: #f5f5f5 !important;
 }
+
 .btn-outline-primary:focus, .btn-outline-primary.focus {
-  box-shadow: 0 0 0 0.2rem rgba(34, 40, 49, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(245,245,245,0.5) !important;
 }
+
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #222831;
-  background-color: transparent;
+  color: #f5f5f5 !important;
+  background-color: transparent !important;
 }
+
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active, .show > .btn-outline-primary.dropdown-toggle {
-  color: #fff;
-  background-color: #222831;
-  border-color: #222831;
+  color: #FFFFFF !important;
+  background-color: #f5f5f5 !important;
+  border-color: #f5f5f5 !important;
 }
+
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(34, 40, 49, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(245,245,245,0.5) !important;
 }
+
 .list-group-item-primary {
-  color: #000000;
-  background-color: #6f809b;
+  color: #7b7b7b !important;
+  background-color: #fcfcfc !important;
 }
+
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #000000;
-  background-color: #62748e;
+  color: #7b7b7b !important;
+  background-color: #fbfbfb !important;
 }
+
 .list-group-item-primary.list-group-item-action.active {
-  color: #fff;
-  background-color: #000000;
-  border-color: #000000;
+  color: #FFFFFF !important;
+  background-color: #7b7b7b !important;
+  border-color: #7b7b7b !important;
 }
-.table-primary, .table-primary > th, .table-primary > td {
-  background-color: #6f809b;
+
+.table-primary {
+  --bs-table-bg: #fafafa !important;
+  --bs-table-striped-bg: #fcfcfc !important;
+  --bs-table-active-bg: #f8f8f8 !important;
+  --bs-table-hover-bg: #f9f9f9 !important;
+  border-color: #f7f7f7 !important;
 }
-.table-hover .table-primary:hover {
-  background-color: #62748e;
-}
-.table-hover .table-primary:hover > td, .table-hover .table-primary:hover > th {
-  background-color: #62748e;
-}
+
 .text-primary {
-  color: #222831 !important;
+  color: #f5f5f5 !important;
 }
+
 a.text-primary:hover, a.text-primary:focus {
-  color: #0d0f12 !important;
+  color: #c4c4c4 !important;
+}
+
+.link-primary {
+  color: #f5f5f5 !important;
+}
+
+a.link-primary:hover, a.link-primary:focus {
+  color: #c4c4c4 !important;
 }
 /*------------------------------------
  - COLOR secondary
  ------------------------------------*/
  .alert-secondary {
-  color: #020202;
-  background-color: #9ca3ae;
-  border-color: #9198a5;
+  color: #696969 !important;
+  background-color: #f6f6f6 !important;
+  border-color: #f2f2f2 !important;
 }
+
 .alert-secondary hr {
-  border-top-color: #838b9a;
+  border-top-color: #ededed !important;
 }
+
 .alert-secondary .alert-link {
-  color: #000000;
+  color: #3f3f3f !important;
 }
+
 .badge-secondary {
-  color: #fff;
-  background-color: #393e46;
+  color: #FFFFFF !important;
+  background-color: #d2d2d2 !important;
 }
+
 .badge-secondary[href]:hover, .badge-secondary[href]:focus {
-  color: #fff;
-  background-color: #222529;
+  color: #FFFFFF !important;
+  background-color: #a8a8a8 !important;
 }
+
 .bg-secondary {
-  background-color: #393e46 !important;
+  color: #FFFFFF !important;
+  background-color: #d2d2d2 !important;
 }
-a.bg-secondary:hover, a.bg-secondary:focus, button.bg-secondary:hover, button.bg-secondary:focus {
-  background-color: #222529 !important;
+
+a.bg-secondary:hover, a.bg-secondary:focus,
+button.bg-secondary:hover,
+button.bg-secondary:focus {
+  background-color: #a8a8a8 !important;
 }
+
 .border-secondary {
-  border-color: #393e46 !important;
+  border-color: #d2d2d2 !important;
 }
+
 .btn-secondary {
-  color: #fff;
-  background-color: #393e46;
-  border-color: #393e46;
+  color: #FFFFFF !important;
+  background-color: #d2d2d2 !important;
+  border-color: #d2d2d2 !important;
 }
+
 .btn-secondary:hover {
-  color: #fff;
-  background-color: #282c32;
-  border-color: #222529;
+  color: #FFFFFF !important;
+  background-color: #bdbdbd !important;
+  border-color: #d2d2d2 !important;
 }
+
 .btn-secondary:focus, .btn-secondary.focus {
-  box-shadow: 0 0 0 0.2rem rgba(57, 62, 70, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(210,210,210,0.5) !important;
 }
+
 .btn-secondary.disabled, .btn-secondary:disabled {
-  color: #fff;
-  background-color: #393e46;
-  border-color: #393e46;
+  color: #FFFFFF !important;
+  background-color: #d2d2d2 !important;
+  border-color: #d2d2d2 !important;
 }
+
 .btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active, .show > .btn-secondary.dropdown-toggle {
-  color: #fff;
-  background-color: #222529;
-  border-color: #1b1d21;
+  color: #FFFFFF !important;
+  background-color: #a8a8a8 !important;
+  border-color: #939393 !important;
 }
+
 .btn-secondary:not(:disabled):not(.disabled):active:focus, .btn-secondary:not(:disabled):not(.disabled).active:focus, .show > .btn-secondary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(57, 62, 70, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(210,210,210,0.5) !important;
 }
+
 .btn-outline-secondary {
-  color: #393e46;
-  background-color: transparent;
-  border-color: #393e46;
+  color: #d2d2d2 !important;
+  background-color: transparent !important;
+  border-color: #d2d2d2 !important;
 }
+
 .btn-outline-secondary:hover {
-  color: #fff;
-  background-color: #393e46;
-  border-color: #393e46;
+  color: #FFFFFF !important;
+  background-color: #d2d2d2 !important;
+  border-color: #d2d2d2 !important;
 }
+
 .btn-outline-secondary:focus, .btn-outline-secondary.focus {
-  box-shadow: 0 0 0 0.2rem rgba(57, 62, 70, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(210,210,210,0.5) !important;
 }
+
 .btn-outline-secondary.disabled, .btn-outline-secondary:disabled {
-  color: #393e46;
-  background-color: transparent;
+  color: #d2d2d2 !important;
+  background-color: transparent !important;
 }
+
 .btn-outline-secondary:not(:disabled):not(.disabled):active, .btn-outline-secondary:not(:disabled):not(.disabled).active, .show > .btn-outline-secondary.dropdown-toggle {
-  color: #fff;
-  background-color: #393e46;
-  border-color: #393e46;
+  color: #FFFFFF !important;
+  background-color: #d2d2d2 !important;
+  border-color: #d2d2d2 !important;
 }
+
 .btn-outline-secondary:not(:disabled):not(.disabled):active:focus, .btn-outline-secondary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-secondary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(57, 62, 70, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(210,210,210,0.5) !important;
 }
+
 .list-group-item-secondary {
-  color: #020202;
-  background-color: #9198a5;
+  color: #696969 !important;
+  background-color: #f2f2f2 !important;
 }
+
 .list-group-item-secondary.list-group-item-action:hover, .list-group-item-secondary.list-group-item-action:focus {
-  color: #020202;
-  background-color: #838b9a;
+  color: #696969 !important;
+  background-color: #ededed !important;
 }
+
 .list-group-item-secondary.list-group-item-action.active {
-  color: #fff;
-  background-color: #020202;
-  border-color: #020202;
+  color: #FFFFFF !important;
+  background-color: #696969 !important;
+  border-color: #696969 !important;
 }
-.table-secondary, .table-secondary > th, .table-secondary > td {
-  background-color: #9198a5;
+
+.table-secondary {
+  --bs-table-bg: #e9e9e9 !important;
+  --bs-table-striped-bg: #f2f2f2 !important;
+  --bs-table-active-bg: #e0e0e0 !important;
+  --bs-table-hover-bg: #e4e4e4 !important;
+  border-color: #dbdbdb !important;
 }
-.table-hover .table-secondary:hover {
-  background-color: #838b9a;
-}
-.table-hover .table-secondary:hover > td, .table-hover .table-secondary:hover > th {
-  background-color: #838b9a;
-}
+
 .text-secondary {
-  color: #393e46 !important;
+  color: #d2d2d2 !important;
 }
+
 a.text-secondary:hover, a.text-secondary:focus {
-  color: #222529 !important;
+  color: #a8a8a8 !important;
+}
+
+.link-secondary {
+  color: #d2d2d2 !important;
+}
+
+a.link-secondary:hover, a.link-secondary:focus {
+  color: #a8a8a8 !important;
 }
 /*------------------------------------
  - COLOR ternary
  ------------------------------------*/
  .alert-ternary {
-  color: #00383a;
-  background-color: #82f9ff;
-  border-color: #6df8ff;
+  color: #803b1e !important;
+  background-color: #ffe4d8 !important;
+  border-color: #ffd6c5 !important;
 }
+
 .alert-ternary hr {
-  border-top-color: #54f7ff;
+  border-top-color: #ffc9b1 !important;
 }
+
 .alert-ternary .alert-link {
-  color: #000707;
+  color: #4d2412 !important;
 }
+
 .badge-ternary {
-  color: #fff;
-  background-color: #00adb5;
+  color: #000000 !important;
+  background-color: #ff763c !important;
 }
+
 .badge-ternary[href]:hover, .badge-ternary[href]:focus {
-  color: #fff;
-  background-color: #007c82;
+  color: #000000 !important;
+  background-color: #cc5f30 !important;
 }
+
 .bg-ternary {
-  background-color: #00adb5 !important;
+  color: #000000 !important;
+  background-color: #ff763c !important;
 }
-a.bg-ternary:hover, a.bg-ternary:focus, button.bg-ternary:hover, button.bg-ternary:focus {
-  background-color: #007c82 !important;
+
+a.bg-ternary:hover, a.bg-ternary:focus,
+button.bg-ternary:hover,
+button.bg-ternary:focus {
+  background-color: #cc5f30 !important;
 }
+
 .border-ternary {
-  border-color: #00adb5 !important;
+  border-color: #ff763c !important;
 }
+
 .btn-ternary {
-  color: #fff;
-  background-color: #00adb5;
-  border-color: #00adb5;
+  color: #000000 !important;
+  background-color: #ff763c !important;
+  border-color: #ff763c !important;
 }
+
 .btn-ternary:hover {
-  color: #fff;
-  background-color: #008a91;
-  border-color: #007c82;
+  color: #000000 !important;
+  background-color: #e66b36 !important;
+  border-color: #ff763c !important;
 }
+
 .btn-ternary:focus, .btn-ternary.focus {
-  box-shadow: 0 0 0 0.2rem rgba(0, 173, 181, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(255,118,60,0.5) !important;
 }
+
 .btn-ternary.disabled, .btn-ternary:disabled {
-  color: #fff;
-  background-color: #00adb5;
-  border-color: #00adb5;
+  color: #000000 !important;
+  background-color: #ff763c !important;
+  border-color: #ff763c !important;
 }
+
 .btn-ternary:not(:disabled):not(.disabled):active, .btn-ternary:not(:disabled):not(.disabled).active, .show > .btn-ternary.dropdown-toggle {
-  color: #fff;
-  background-color: #007c82;
-  border-color: #006d72;
+  color: #000000 !important;
+  background-color: #cc5f30 !important;
+  border-color: #b3532a !important;
 }
+
 .btn-ternary:not(:disabled):not(.disabled):active:focus, .btn-ternary:not(:disabled):not(.disabled).active:focus, .show > .btn-ternary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(0, 173, 181, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(255,118,60,0.5) !important;
 }
+
 .btn-outline-ternary {
-  color: #00adb5;
-  background-color: transparent;
-  border-color: #00adb5;
+  color: #ff763c !important;
+  background-color: transparent !important;
+  border-color: #ff763c !important;
 }
+
 .btn-outline-ternary:hover {
-  color: #fff;
-  background-color: #00adb5;
-  border-color: #00adb5;
+  color: #000000 !important;
+  background-color: #ff763c !important;
+  border-color: #ff763c !important;
 }
+
 .btn-outline-ternary:focus, .btn-outline-ternary.focus {
-  box-shadow: 0 0 0 0.2rem rgba(0, 173, 181, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(255,118,60,0.5) !important;
 }
+
 .btn-outline-ternary.disabled, .btn-outline-ternary:disabled {
-  color: #00adb5;
-  background-color: transparent;
+  color: #ff763c !important;
+  background-color: transparent !important;
 }
+
 .btn-outline-ternary:not(:disabled):not(.disabled):active, .btn-outline-ternary:not(:disabled):not(.disabled).active, .show > .btn-outline-ternary.dropdown-toggle {
-  color: #fff;
-  background-color: #00adb5;
-  border-color: #00adb5;
+  color: #000000 !important;
+  background-color: #ff763c !important;
+  border-color: #ff763c !important;
 }
+
 .btn-outline-ternary:not(:disabled):not(.disabled):active:focus, .btn-outline-ternary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-ternary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(0, 173, 181, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(255,118,60,0.5) !important;
 }
+
 .list-group-item-ternary {
-  color: #00383a;
-  background-color: #6df8ff;
+  color: #803b1e !important;
+  background-color: #ffd6c5 !important;
 }
+
 .list-group-item-ternary.list-group-item-action:hover, .list-group-item-ternary.list-group-item-action:focus {
-  color: #00383a;
-  background-color: #54f7ff;
+  color: #803b1e !important;
+  background-color: #ffc9b1 !important;
 }
+
 .list-group-item-ternary.list-group-item-action.active {
-  color: #fff;
-  background-color: #00383a;
-  border-color: #00383a;
+  color: #000000 !important;
+  background-color: #803b1e !important;
+  border-color: #803b1e !important;
 }
-.table-ternary, .table-ternary > th, .table-ternary > td {
-  background-color: #6df8ff;
+
+.table-ternary {
+  --bs-table-bg: #ffbb9e !important;
+  --bs-table-striped-bg: #ffd6c5 !important;
+  --bs-table-active-bg: #ffa077 !important;
+  --bs-table-hover-bg: #ffad8a !important;
+  border-color: #ff9263 !important;
 }
-.table-hover .table-ternary:hover {
-  background-color: #54f7ff;
-}
-.table-hover .table-ternary:hover > td, .table-hover .table-ternary:hover > th {
-  background-color: #54f7ff;
-}
+
 .text-ternary {
-  color: #00adb5 !important;
+  color: #ff763c !important;
 }
+
 a.text-ternary:hover, a.text-ternary:focus {
-  color: #007c82 !important;
+  color: #cc5f30 !important;
+}
+
+.link-ternary {
+  color: #ff763c !important;
+}
+
+a.link-ternary:hover, a.link-ternary:focus {
+  color: #cc5f30 !important;
 }
